Fixed highlight and figure spacing.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -199,6 +199,9 @@ figure.highlight pre {
   width: max-content;
   min-width: 100%;
   -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
+  margin-block-end: calc(
+    calc(var(--spacing) * 6) * calc(1 - var(--tw-space-y-reverse))
+  );
 }
 
 /* Base dark styles */
